# polykalsh

./: .env.example  .gitignore  README.md  pyproject.toml
src/polykalsh/: __init__.py  config.py
src/polykalsh/advisor/: __init__.py  auto_advisor.py  chat.py  schemas.py  tools.py
src/polykalsh/clients/kalshi/: __init__.py  auth.py  client.py  schemas.py
src/polykalsh/dashboard/: __init__.py  app.py
src/polykalsh/dashboard/routes/: __init__.py  advisor.py  hybrid.py  kalshi.py  main.py  polymarket.py
src/polykalsh/dashboard/templates/: base.html  index.html
src/polykalsh/dashboard/templates/advisor/: chat.html
src/polykalsh/dashboard/templates/errors/: 404.html  500.html
src/polykalsh/dashboard/templates/hybrid/: history.html  index.html  positions.html  settings.html
src/polykalsh/dashboard/templates/kalshi/: history.html  index.html  positions.html  settings.html
src/polykalsh/database/: __init__.py  db.py  models.py
src/polykalsh/hybrid/: __init__.py  discovery.py  exit_manager.py  orchestrator.py
src/polykalsh/hybrid/ensemble/: __init__.py  agents.py  aggregator.py  base.py  schemas.py
src/polykalsh/hybrid/portfolio/: __init__.py  kelly.py  optimizer.py
src/polykalsh/hybrid/research/: __init__.py  manager.py  perplexity.py  schemas.py
src/polykalsh/hybrid/strategies/: __init__.py  base.py  directional.py  market_making.py
src/polykalsh/notifications/: __init__.py  discord.py
src/polykalsh/workers/: __init__.py  hybrid_worker.py
tests/: test_phase10_dashboard.py  test_phase8_orchestrator.py  test_phase9_infrastructure.py
(+22 files in other folders)
