[project]
name = "polykalsh"
version = "0.1.0"
description = "Personal prediction market trading bot - Polymarket copy-trader + Kalshi advisor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krish Malik" }]

dependencies = [
    # Web framework
    "flask>=3.0",
    "flask-htmx>=0.4",

    # Configuration
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy>=2.0",

    # Polymarket
    "py-clob-client>=0.19",
    "eth-account>=0.13",

    # Kalshi
    "kalshi-python>=2.1",

    # HTTP clients
    "httpx>=0.27",
    "websockets>=12.0",

    # Background tasks
    "apscheduler>=3.10",

    # Utilities
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-requests",
]

[project.scripts]
polykalsh = "polykalsh.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polykalsh"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["polykalsh"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
